tests/paczka1/fuzzy1/94152808.err
Error in line 5: fN28AEo A705 96,3
Error in line 18: VGx A705 290,1
Error in line 27: S588 S588 89,9
